Fix TOC spacing

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1018,6 +1018,15 @@ starlight-toc li {
   margin-bottom: 0.375rem;
 }
 
+starlight-toc li:has(ul) {
+  margin-bottom: 0.625rem;
+}
+
+starlight-toc ul {
+  margin-top: 0.375rem;
+  margin-bottom: 0.625rem;
+}
+
 starlight-toc a:hover::before {
   background-color: var(--tnz-nav-hover-bg);
 }
@@ -1049,6 +1058,15 @@ mobile-starlight-toc a::before {
 
 mobile-starlight-toc li {
   margin-bottom: 0.375rem;
+}
+
+mobile-starlight-toc li:has(ul) {
+  margin-bottom: 0.625rem;
+}
+
+mobile-starlight-toc ul {
+  margin-top: 0.375rem;
+  margin-bottom: 0.625rem;
 }
 
 mobile-starlight-toc a:hover::before {
